@@ -527,6 +527,7 @@ Version 1.13.0-dev:
      defeat_condition set to no_units_left or never couldn't capture villages
    * Fixed several Mac OS specific bugs in GUI.pyw
    * Fixed bug 22987 for filtering on era and mods in the Multiplayer lobby.
+   * Fixed bug 23117 Invert breaks lobby filtering if Apply Filter is off.
 
 Version 1.11.11:
  * Add-ons server:
